--- a/src/app/ALLregister/componentregister/componentregister.component.html
+++ b/src/app/ALLregister/componentregister/componentregister.component.html
@@ -91,7 +91,7 @@
                       
                         <div class="mt-5">
                             <button [disabled]="!registerForm.valid" class="btn btn-sm btn-outline-secondary btn-block"
-                                type="submit" [routerLink]="['/register/component']"><i class="fa fa-check mr-2"></i>Register</button>  
+                                type="submit"><i class="fa fa-check mr-2"></i>Register</button>  
                         </div>
 
                     </div>
