--- a/src/app/Reels/reel-edit/reel-edit.component.html
+++ b/src/app/Reels/reel-edit/reel-edit.component.html
@@ -7,7 +7,7 @@
                 Changes</button>
             <button class="btn btn-sm btn-outline-secondary" [routerLink]="['/reels']">Back</button>
             <button class="btn btn-sm btn-secondary" [routerLink]="['/members']">History</button>
-            <button class="btn btn-sm btn-outline-secondary" [routerLink]="['/reels']" (click)="deleteR()">Delete</button>
+            <button class="btn btn-sm btn-outline-secondary" (click)="deleteR()">Delete</button>
         </div>
     </div>
 
