--- a/src/app/members/component-detail/component-detail.component.html
+++ b/src/app/members/component-detail/component-detail.component.html
@@ -9,7 +9,7 @@
         <button class="btn btn-sm btn-outline-secondary" [routerLink]="['/member/edit2/', components.id]">Edit</button>
         <button class="btn btn-sm btn-outline-secondary" (click)="printf()">Print</button>
         <button class="btn btn-sm btn-outline-secondary" [routerLink]="['/members/history', components.id]">History</button>
-        <button class="btn btn-sm btn-outline-secondary" (click)="deleteC()" [routerLink]="['/members']">Delete</button>
+        <button class="btn btn-sm btn-outline-secondary" (click)="deleteC()" >Delete</button>
       </div>
     </div>
 
