--- a/src/app/ALLregister/reelregister/reelregister.component.html
+++ b/src/app/ALLregister/reelregister/reelregister.component.html
@@ -9,14 +9,17 @@
                 <div class="row">
                     <div class="col-sm-6 input-group-sm">
                         <label>Component</label>
-                        
+
                         <div class="input-group-sm mb-3">
-                                <select type="text" formControlName="CMnf" placeholder="Enter Manufacturer Number.." class="custom-select" id="inputGroupSelect01">
-                                  <option *ngFor="let components of components" value={{components.mnf}}>{{components.mnf}}</option>
-                                  <option  routerLink="/register/component">Register new...</option>
-                                </select>
+                            <select type="text" formControlName="CMnf" placeholder="Enter Manufacturer Number.."
+                                class="custom-select" id="inputGroupSelect01">
+                                <option *ngFor="let components of components" value={{components.mnf}}>
+                                    {{components.mnf}}</option>
+                                <option routerLink="/register/component">Register new...</option>
+                            </select>
                         </div>
 
+                        
                     </div>
                     <div class="col-sm-6 input-group-sm ">
                         <label>QTY</label>
@@ -28,22 +31,35 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="mt-5">
-                            <button [disabled]="!registerForm.valid" class="btn btn-sm btn-outline-secondary btn-block"
-                                type="submit" [routerLink]="['/register/reel']"><i
-                                    class="fa fa-check mr-2"></i>Register</button>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <span class="input-group-btn">
+                                        <span class="btn btn-default btn-file btn-outline-secondary">
+                                            Browse… 
+                                            <input type="file" formControlName="file" id="file" class="form-control"
+                                            (change)="onFileChange($event)" (change)="showPreview($event)">
+                                        </span>
+                                    </span>
+                                    <input type="text" class="form-control" readonly>
+                                </div>
+                                <img *ngIf="imageURL" [src]="imageURL" height="file" width="100%"/>
+                            </div>
                             
-                            <button type="button" class="btn btn-sm btn-outline-secondary btn-block"><i class="fas fa-print mr-2"></i>Print</button>
                         </div>
 
                     </div>
                     <div class="col-sm-6">
                         <div class="mt-5">
-                            <input type="file" formControlName="file" id="file" class="form-control"
-                                (change)="onFileChange($event)" (change)="showPreview($event)" />
-                            <img [src]="imageURL" height="file" width="100%">
+                            <button [disabled]="!registerForm.valid" class="btn btn-sm btn-outline-secondary btn-block"
+                                type="submit" [routerLink]="['/register/reel']"><i
+                                    class="fa fa-check mr-2"></i>Register</button>
+
+                            <button type="button" class="btn btn-sm btn-outline-secondary btn-block"><i
+                                    class="fas fa-print mr-2"></i>Print</button>
                         </div>
 
                     </div>
+                    
 
                 </div>
 
