--- a/src/app/ReelLocations/both/both.component.html
+++ b/src/app/ReelLocations/both/both.component.html
@@ -30,10 +30,10 @@
   <h1 class="h2">History</h1>
   <div class="col-12 box border-top">
     <div class="row">
-      <div class="col-sm-1"><strong>Data</strong></div>
-      <div class="col-sm-1 text-center"><strong>Component ID</strong></div>
-      <div class="col-sm-1 text-center"><strong>Reel ID</strong></div>
-      <div class="col-sm-2"><strong>Manufacturer number</strong></div>
+      <div [(ngModel)]="componentParams.OrderBy" (click)="GetHistory()" btnRadio="" class="col-sm-1"><strong>Data</strong></div>
+      <div  class="col-sm-1 text-center"><strong>Component ID</strong></div>
+      <div [(ngModel)]="componentParams.OrderBy" (click)="GetHistory()" btnRadio="ID" class="col-sm-1 text-center"><strong>Reel ID</strong></div>
+      <div [(ngModel)]="componentParams.OrderBy" (click)="GetHistory()" btnRadio="Mnf" class="col-sm-2"><strong>Manufacturer number</strong></div>
       <div class="col-sm-3">
         <div class="row">
           <div class="col-sm-4"><strong>Old Location</strong></div>
@@ -75,4 +75,15 @@
     </div>
       
   </div>
+  <div class="d-flex justify-content-center mt-2">
+    <pagination *ngIf="pagination"
+                [boundaryLinks]="true" 
+                [totalItems]="pagination.totalItems" 
+                [itemsPerPage]="pagination.itempsPerPage"
+                [(ngModel)]="pagination.currentPage"
+                (pageChanged)="pageChanged($event)"
+                previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+  
+   </pagination>
+
 </div>
