--- a/src/app/Reels/reels-list/reels-list.component.html
+++ b/src/app/Reels/reels-list/reels-list.component.html
@@ -53,7 +53,8 @@
       
 
       <div class="d-flex justify-content-center mt-2">
-        <pagination [boundaryLinks]="true" 
+        <pagination *ngIf="pagination"
+                    [boundaryLinks]="true" 
                     [totalItems]="pagination.totalItems" 
                     [itemsPerPage]="pagination.itempsPerPage"
                     [(ngModel)]="pagination.currentPage"
