--- a/src/app/members/usedreel-list/usedreel-list.component.css
+++ b/src/app/members/usedreel-list/usedreel-list.component.css
@@ -11,6 +11,26 @@
     -webkit-perspective: 780px;
     perspective: 780px;
 }
+.myButton {
+	background-color:#ffffff;
+	border-radius:10px;
+	border:1px solid #858585;
+	display:inline-block;
+	cursor:pointer;
+	color:#575757;
+	font-family:Courier New;
+	font-size:10px;
+    font-weight:bold;
+	text-decoration:none;
+}
+.myButton:hover {
+    background-color:#666666;
+    color: white;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
 .loader-inner {
     position: absolute;
     width: 100%;
