--- a/src/app/Reels/reels-list/reels-list.component.css
+++ b/src/app/Reels/reels-list/reels-list.component.css
@@ -32,14 +32,31 @@ td.left, th.lefr{
 	text-decoration:none;
 }
 .myButton:hover {
-    background-color:#666666;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 .myButton:active {
 	position:relative;
 	top:1px;
 }
-
+.myButton2 {
+	background-color:#575757;
+	border-radius:10px;
+	border:1px solid #858585;
+	display:inline-block;
+	cursor:pointer;
+	color:white;
+	font-family:Courier New;
+	font-size:10px;
+    font-weight:bold;
+	text-decoration:none;
+}
+.myButton2:hover {
+    color: #000000;
+}
+.myButton2:active {
+	position:relative;
+	top:1px;
+}
 
 .profile-img{
     text-align: center;
