--- a/src/app/Reels/reels-list/reels-list.component.html
+++ b/src/app/Reels/reels-list/reels-list.component.html
@@ -50,7 +50,7 @@
                   class="far fa-edit"></i></button></td>
             <td *appHasRole="['Moderator', 'Admin']" class="left"><button  class="myButton" (click)="TurnOnLed(reel.id)"><i
                   class="fas fa-lightbulb" aria-hidden="true"></i></button>
-              <button  class="myButton2" (click)="TurnOnLed(reel.id)"><i
+              <button  class="myButton2" (click)="TurnOffLed(reel.id)"><i
                   class="fas fa-lightbulb" aria-hidden="true"></i></button>
             </td>
 
