--- a/src/app/members/usedreel-list/usedreel-list.component.html
+++ b/src/app/members/usedreel-list/usedreel-list.component.html
@@ -36,7 +36,7 @@ SEARCH REELS
           <td>{{reels.qty}}</td>
           <td>{{reels.cMnf}}</td>
           <td>
-           <button class="myButton" (click)="TurnOnLed(reels.id)"><i class="fas fa-lightbulb" aria-hidden="true"></i> Turn on LED and take reel</button>
+           <button class="myButton" (click)="TakeOut(reels.id)"><i class="fas fa-lightbulb" aria-hidden="true"></i> Turn on LED and take reel</button>
           </td>
         </tr>
 
