--- a/src/app/admin/admin-list/admin-list.component.html
+++ b/src/app/admin/admin-list/admin-list.component.html
@@ -1,6 +1,12 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <div class="container">
-<div class="row">
+
+	<button class="btn btn-secondary" (click)="turnOnAll()" >Turn on All</button>
+	<button class="btn btn-secondary" (click)="turnOffAll()" >Turn off All</button>
+
+
+
+	<div class="row">
 	<div class="col-lg-12">
 		<div class="main-box clearfix">
 			<div class="table-responsive">
