--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,12 +64,6 @@
                                     Reels
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" [routerLink]="['/BOM']">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-activity"><line x1="8" y1="6" x2="21" y2="6"></line><line x1="8" y1="12" x2="21" y2="12"></line><line x1="8" y1="18" x2="21" y2="18"></line><line x1="3" y1="6" x2="3" y2="6"></line><line x1="3" y1="12" x2="3" y2="12"></line><line x1="3" y1="18" x2="3" y2="18"></line></svg> 
-                                    BOM
-                                </a>
-                            </li>
                             
                         </ul>
     
@@ -132,6 +126,34 @@
                                 <a class="nav-link" [routerLink]="['/admin']">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-database"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg>
                                     ADMIN
+                                </a>
+                            </li>
+                        </ul>
+                        <h6 *appHasRole="['Admin','Moderator']"
+                            class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                            <span>BOM Manager</span>
+                        </h6>
+                        <ul *appHasRole="['Admin','Moderator']" class="nav flex-column mb-2">
+                            <li  class="nav-item">
+                                <a class="nav-link" [routerLink]="['/bom']">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-database"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg>
+                                    List
+                                </a>
+                            </li>
+                        </ul>
+                        <ul *appHasRole="['Admin','Moderator']" class="nav flex-column mb-2">
+                            <li  class="nav-item">
+                                <a class="nav-link" [routerLink]="['/bom/upload']">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-database"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg>
+                                    Upload BOM
+                                </a>
+                            </li>
+                        </ul>
+                        <ul *appHasRole="['Admin','Moderator']" class="nav flex-column mb-2">
+                            <li  class="nav-item">
+                                <a class="nav-link" [routerLink]="['/bom/create']">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-database"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg>
+                                    Create BOM
                                 </a>
                             </li>
                         </ul>
