pridetas rankinis location keitimas

--- a/src/app/Reels/reel-edit/reel-edit.component.html
+++ b/src/app/Reels/reel-edit/reel-edit.component.html
@@ -59,7 +59,7 @@
                     Location:
                 </div>
                 <div class="col-sm-7 qr">
-                    <qrcode qrdata="{{reel.location}}" [width]="20" [errorCorrectionLevel]="'M'"></qrcode>
+                    <input class="form-control input-sm" name="Location" id="" cols="5" rows="1" [(ngModel)]="reel.location">
                 </div>
             </div>
         </div>
