Added BOM MANAGER
Padarytas nukreipimas is reels i componenta
BOM upload
Pridetas BOM stulpliu suradymas ir klaidos pranesims jei stulpelis nerastas
BOM name list
BOM list

--- a/src/app/Reels/reel-card-detail/reel-card-detail.component.html
+++ b/src/app/Reels/reel-card-detail/reel-card-detail.component.html
@@ -22,8 +22,8 @@
                 <div class="col-sm-5 border-right">
                     Mnf:
                 </div>
-                <div class="col-sm-7">
-                    {{reel.cMnf}}
+                <div [routerLink]="['/members/', reel.componentasId]" class="col-sm-7 ">
+                    <b>{{reel.cMnf}}</b>
                 </div>
             </div>
         </div>
