--- a/src/app/BOM/BOM.component.css
+++ b/src/app/BOM/BOM.component.css
@@ -1,3 +1,11 @@
 tr:hover{
     background-color: rgb(238, 238, 238);
 }
+.antras{
+    position: relative;
+    top: 10%;
+
+}
+table{
+    max-height: 30%;
+}
