--- a/src/app/BOM/BOM.component.html
+++ b/src/app/BOM/BOM.component.html
@@ -75,7 +75,7 @@
 </div>
 <div class="antras">
   <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">JOB List</h1>
+    <h1 class="h2">TASKS List</h1>
 
     <div class="btn-toolbar mb-2 mb-md-0">
 
@@ -98,7 +98,7 @@
   </div>
   <div class="row">
     <div class="col-sm-4">
-      <app-create></app-create>
+      <app-create [bomNames]="bomNames"></app-create>
     </div>
     <div class="col-sm-8">
       <div class="container">
@@ -107,7 +107,9 @@
           <thead class="center">
             <tr>
               <th></th>
-              <th>Job name</th>
+              <th>Status</th>
+              <th>Task name</th>
+              <th>BOM name </th>
               <th>Date Added</th>
               <th>Last Modified</th>
               <th></th>
