--- a/src/app/BOM/create/create.component.html
+++ b/src/app/BOM/create/create.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn btn-secondary btn-block" type="submit">Create new</button>
+<button class="btn btn btn-secondary btn-block" type="submit" (click)="create()">Create new</button>
