--- a/src/app/BOM/BOM.component.html
+++ b/src/app/BOM/BOM.component.html
@@ -24,7 +24,7 @@
 
 <div class="row">
   <div class="col-sm-4">
-    <app-upload></app-upload>
+    <app-upload (bomuploaded)="ngOnInit()"></app-upload>
   </div>
   <div class="col-sm-8">
     <div class="containeris">
