--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,35 @@
-
-
-<div  class="container mt-5">
-  <div *ngIf="!registerMode" style="text-align: center">
+<div class="container mt-5">
+  <div style="text-align: center">
     <h1>Find your component</h1>
     <p class="lead">All you need to do is sign up!</p>
-    <div class="text-center">
-      <button class="btn btn-light btn-lg mr-2 ">Learn more</button>
-      <button class="btn btn-dark btn-lg" (click)="registerToggle()" ><b>Sign up</b></button>
+  </div>
+</div>
+
+
+<div class="row mt-5">
+  <div class="col-sm-4">
+    <p class="lead text-center" > Ritės registracija </p>
+    <div class="mx-auto" style="width: 450px;">
+      <youtube-player videoId="GYAB4Td62zI" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="4"
+        [endSeconds]="8">
+      </youtube-player>
     </div>
   </div>
-
-  <div *ngIf="registerMode" class="container">
-    <div class="row justify-content-center">
-      <div class="col-4">
-          <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
-      </div>
+  <div class="col-sm-4">
+    <p class="lead text-center" > Komponento registracija </p>
+    <div class="mx-auto" style="width: 450px;">
+      <youtube-player videoId="GYAB4Td62zI" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="4"
+        [endSeconds]="8">
+      </youtube-player>
     </div>
+  </div>
+  <div class="col-sm-4">
+    <p class="lead text-center" > Paieškos sistema </p>
+    <div class="mx-auto" style="width: 450px;">
+      <youtube-player videoId="GYAB4Td62zI" suggestedQuality="highres" [height]="300" [width]="450" [startSeconds]="4"
+        [endSeconds]="8">
+      </youtube-player>
+    </div>
+
   </div>
 </div>
