--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
 <div class="main" *ngIf="loggedIn()"> 
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">Storage APP</a>
@@ -23,14 +13,14 @@
         </ul>
     </nav>
     
-    <div class="container-fluid" >
+    <div class="container-fluid">
         <div class="row">
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
                 <div class="sidebar-sticky pt-3">
                     <li class="nav-item">
                         <div class="sidebar-header">
                             <div class="user-pic">
-                                <img *ngIf="user" class="img-responsive img-rounded"
+                                <img *ngIf="user != null" class="img-responsive img-rounded"
                                     src="{{user.photoUrl}}"
                                     alt="User picture">
                             </div>
@@ -146,21 +136,9 @@
             </nav>
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
                 <router-outlet></router-outlet>
-            
             </main>
         </div>
     </div>
 </div>
 
 <app-login *ngIf="!loggedIn()"></app-login>
-                        
-
-
-
-                        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-                        <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-                        <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-                        <!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-                        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-                        <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-                        <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
